# dorothy

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  LICENSE  Makefile.am  Makefile.txt  README.md  autoreconf.bsh  body.dorothy  build.linux.bsh  config.h.in  configure  configure.ac  configure.scan  head.dorothy  package_info.txt  test.dorothy
ci/: ci.bsh
source/: CMakeLists.txt  dorothy.cpp  dorothy.hpp  global.cpp  global.hpp  main.cpp  main.hpp  os.cpp  os.hpp
src/: dorothy.cpp  dorothy.hpp  global.cpp  global.hpp  main.cpp  main.hpp  os.cpp  os.hpp
